# printf_helper

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  test.cpp
.conan/profiles/: clang  gcc
include/printf_helper/: printf_helper.h
tests/: printf_helper_tests.cpp
